Fix header alignment for diffrent screens sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,9 +498,7 @@ footer {
 
     .navigation {
         display: block;
-        margin-right: 0;
         font-size: 90%;
-        margin-left:0;
     }
 
     .navigation ul {
@@ -514,8 +512,8 @@ footer {
 
 
 }
-/* JioPhone 2 and iphone 4 */
-@media screen and (max-width: 240px) {
+/* JioPhone 2, iphone 4 and Galaxy Fold */
+@media screen and (max-width: 280px) {
 
     body {
 
@@ -524,7 +522,6 @@ footer {
 
     .navigation li {
         margin-left: 7px;
-        margin-right: 0;
         font-size: 70%;
     }
 
